--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,21 +1,24 @@
-name: Deploy to GCP
+name: Deploy to Cloud Run
 
 on:
   push:
     branches:
       - main
 
+permissions:
+  contents: read
+  id-token: write   # Required for OIDC
+
 jobs:
   deploy:
+    name: Build & Deploy to Cloud Run
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      id-token: write  # Required for OIDC
 
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
+      # 🔐 Authenticate to Google Cloud using Workload Identity Federation
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
@@ -23,18 +26,38 @@ jobs:
           workload_identity_provider: ${{ vars.GCP_WORKLOAD_IDENTITY_PROVIDER }}
           service_account: ${{ vars.GCP_SERVICE_ACCOUNT_EMAIL }}
 
-      - name: Set up gcloud SDK
+      # ⚙️ Setup gcloud SDK
+      - name: Setup gcloud SDK
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ vars.GCP_PROJECT_ID }}
 
-      - name: Verify authentication
-        run: gcloud auth list
+      # 🧱 Configure Docker authentication for Artifact Registry
+      - name: Configure Docker authentication
+        run: gcloud auth configure-docker "${{ vars.GCP_REGION }}-docker.pkg.dev"
 
-      # Example: deploy a GCP resource
-      - name: Deploy Cloud Run service
+      # 🏗️ Build and push Docker image
+      - name: Build and Push Image
         run: |
+          IMAGE_URI="${{ vars.GCP_REGION }}-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/${{ vars.GCP_ARTIFACT_REPO }}/my-app:latest"
+          echo "Building and pushing image: $IMAGE_URI"
+          docker build -t "$IMAGE_URI" .
+          docker push "$IMAGE_URI"
+        env:
+          PROJECT_ID: ${{ vars.GCP_PROJECT_ID }}
+          REGION: ${{ vars.GCP_REGION }}
+          REPO: ${{ vars.GCP_ARTIFACT_REPO }}
+
+      # 🚀 Deploy to Cloud Run
+      - name: Deploy to Cloud Run
+        run: |
+          IMAGE_URI="${{ vars.GCP_REGION }}-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/${{ vars.GCP_ARTIFACT_REPO }}/my-app:latest"
+          echo "Deploying Cloud Run service using image: $IMAGE_URI"
           gcloud run deploy my-app \
-            --image gcr.io/${{ vars.GCP_PROJECT_ID }}/my-app:latest \
-            --region us-central1 \
-            --allow-unauthenticated
+            --image "$IMAGE_URI" \
+            --region "${{ vars.GCP_REGION }}" \
+            --allow-unauthenticated \
+            --platform managed
+        env:
+          PROJECT_ID: ${{ vars.GCP_PROJECT_ID }}
+          REGION: ${{ vars.GCP_REGION }}
