--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,8 +34,7 @@ jobs:
 
       # 🧱 Configure Docker authentication for Artifact Registry
       - name: Configure Docker authentication
-        run: gcloud auth configure-docker --quiet gcr.io,${{ vars.GCP_REGION }}-docker.pkg.dev
-
+        run: gcloud auth configure-docker --quiet ${{ vars.GCP_REGION }}-docker.pkg.dev
 
       # 🏗️ Build and push Docker image
       - name: Build and Push Image
@@ -44,10 +43,6 @@ jobs:
           echo "Building and pushing image: $IMAGE_URI"
           docker build -t "$IMAGE_URI" .
           docker push "$IMAGE_URI"
-        env:
-          PROJECT_ID: ${{ vars.GCP_PROJECT_ID }}
-          REGION: ${{ vars.GCP_REGION }}
-          REPO: ${{ vars.GCP_ARTIFACT_REPO }}
 
       # 🚀 Deploy to Cloud Run
       - name: Deploy to Cloud Run
@@ -59,6 +54,3 @@ jobs:
             --region "${{ vars.GCP_REGION }}" \
             --allow-unauthenticated \
             --platform managed
-        env:
-          PROJECT_ID: ${{ vars.GCP_PROJECT_ID }}
-          REGION: ${{ vars.GCP_REGION }}
