--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,56 +1,56 @@
-name: Deploy to Cloud Run
+# name: Deploy to Cloud Run
 
-on:
-  push:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
 
-permissions:
-  contents: read
-  id-token: write   # Required for OIDC
+# permissions:
+#   contents: read
+#   id-token: write   # Required for OIDC
 
-jobs:
-  deploy:
-    name: Build & Deploy to Cloud Run
-    runs-on: ubuntu-latest
+# jobs:
+#   deploy:
+#     name: Build & Deploy to Cloud Run
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
 
-      # 🔐 Authenticate to Google Cloud using Workload Identity Federation
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v2
-        with:
-          token_format: access_token
-          workload_identity_provider: ${{ vars.GCP_WORKLOAD_IDENTITY_PROVIDER }}
-          service_account: ${{ vars.GCP_SERVICE_ACCOUNT_EMAIL }}
+#       # 🔐 Authenticate to Google Cloud using Workload Identity Federation
+#       - name: Authenticate to Google Cloud
+#         uses: google-github-actions/auth@v2
+#         with:
+#           token_format: access_token
+#           workload_identity_provider: ${{ vars.GCP_WORKLOAD_IDENTITY_PROVIDER }}
+#           service_account: ${{ vars.GCP_SERVICE_ACCOUNT_EMAIL }}
 
-      # ⚙️ Setup gcloud SDK
-      - name: Setup gcloud SDK
-        uses: google-github-actions/setup-gcloud@v2
-        with:
-          project_id: ${{ vars.GCP_PROJECT_ID }}
+#       # ⚙️ Setup gcloud SDK
+#       - name: Setup gcloud SDK
+#         uses: google-github-actions/setup-gcloud@v2
+#         with:
+#           project_id: ${{ vars.GCP_PROJECT_ID }}
 
-      # 🧱 Configure Docker authentication for Artifact Registry
-      - name: Configure Docker authentication
-        run: gcloud auth configure-docker --quiet gcr.io,${{ vars.GCP_REGION }}-docker.pkg.dev
+#       # 🧱 Configure Docker authentication for Artifact Registry
+#       - name: Configure Docker authentication
+#         run: gcloud auth configure-docker --quiet gcr.io,${{ vars.GCP_REGION }}-docker.pkg.dev
 
-      # 🏗️ Build and push Docker image
-      - name: Build and Push Image
-        run: |
-          IMAGE_URI="${{ vars.GCP_REGION }}-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/${{ vars.GCP_ARTIFACT_REPO }}/my-app:latest"
-          echo "Building and pushing image: $IMAGE_URI"
-          docker build -t "$IMAGE_URI" .
-          docker push "$IMAGE_URI"
+#       # 🏗️ Build and push Docker image
+#       - name: Build and Push Image
+#         run: |
+#           IMAGE_URI="${{ vars.GCP_REGION }}-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/${{ vars.GCP_ARTIFACT_REPO }}/my-app:latest"
+#           echo "Building and pushing image: $IMAGE_URI"
+#           docker build -t "$IMAGE_URI" .
+#           docker push "$IMAGE_URI"
 
-      # 🚀 Deploy to Cloud Run
-      - name: Deploy to Cloud Run
-        run: |
-          IMAGE_URI="${{ vars.GCP_REGION }}-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/${{ vars.GCP_ARTIFACT_REPO }}/my-app:latest"
-          echo "Deploying Cloud Run service using image: $IMAGE_URI"
-          gcloud run deploy my-app \
-            --image "$IMAGE_URI" \
-            --region "${{ vars.GCP_REGION }}" \
-            --allow-unauthenticated \
-            --platform managed
+#       # 🚀 Deploy to Cloud Run
+#       - name: Deploy to Cloud Run
+#         run: |
+#           IMAGE_URI="${{ vars.GCP_REGION }}-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/${{ vars.GCP_ARTIFACT_REPO }}/my-app:latest"
+#           echo "Deploying Cloud Run service using image: $IMAGE_URI"
+#           gcloud run deploy my-app \
+#             --image "$IMAGE_URI" \
+#             --region "${{ vars.GCP_REGION }}" \
+#             --allow-unauthenticated \
+#             --platform managed
